<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

        <Button
            android:id="@+id/nav_task_1"
            android:icon="@drawable/man"
            android:title="@string/lab_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <Button
            android:id="@+id/nav_task_2"
            android:icon="@drawable/man"
            android:title="@string/lab_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <Button
            android:id="@+id/nav_task_3"
            android:icon="@drawable/man"
            android:title="@string/lab_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

</LinearLayout>