<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lab1Coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_width"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/margin_default"
                app:srcCompat="@drawable/photo"
                android:contentDescription="@string/your_photo" />

            <TextView
                android:id="@+id/lab1LabelPhotoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/live_broadcast_from_your_camera"
                android:textSize="18sp" />

        </FrameLayout>

        <ListView
            android:id="@+id/lab1List"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:entries="@array/games">
        </ListView>

    </LinearLayout>

    <TextView
        android:id="@+id/lab1Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="33sp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"/>

    <EditText
        android:id="@+id/lab1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/edit_text"
        android:autofillHints="Label"
        android:inputType="text" />

    <Switch
        android:id="@+id/lab1SwitchChangeColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_label_color"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


        <LinearLayout
            android:layout_width="@dimen/linear_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_default">

        <Button
            android:id="@+id/lab1BtnHideList"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:text="@string/hide_list"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:backgroundTint="@color/red"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/lab1BtnToast"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:text="@string/toast"
            android:textSize="18sp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:layout_gravity="start"/>


    </LinearLayout>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lab1Fab"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/stat_notify_sync"
        android:focusable="true"
        android:layout_margin="@dimen/margin_default"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/change_label_text" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>