<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab1.Lab1DetailActivity">

    <ImageView
        android:id="@+id/lab1DetailImage"
        android:layout_width="@dimen/big_btn_width"
        android:layout_height="@dimen/big_btn_width"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/game_cover" />

    <TextView
        android:id="@+id/lab1DetailTitle"
        android:layout_width="@dimen/big_btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lab1DetailImage"
        tools:text="title"  />

    <ImageView
        android:id="@+id/lab1DetailIcon"
        android:layout_width="58dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/lab1DetailImage"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:srcCompat="@android:drawable/presence_audio_away"
        android:contentDescription="@string/game_icon" />

    <TextView
        android:id="@+id/lab1DetailDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@id/lab1DetailImage"
        app:layout_constraintTop_toBottomOf="@+id/lab1DetailIcon"
        tools:text="dimension" />

    <TextView
        android:id="@+id/lab1DetailLabelNat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="0"
        android:textSize="@dimen/detail_big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lab1DetailBtnNat"
        app:layout_constraintLeft_toRightOf="@id/lab1DetailBtnNat"
        app:layout_constraintStart_toStartOf="@+id/lab1DetailBtnNat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lab1DetailLabelFib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:gravity="center"
        tools:text="0"
        android:textSize="@dimen/detail_big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lab1DetailBtnFib"
        app:layout_constraintLeft_toRightOf="@id/lab1DetailBtnFib"
        app:layout_constraintStart_toStartOf="@+id/lab1DetailBtnFib"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lab1DetailLabelCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="0"
        android:textSize="@dimen/detail_big_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lab1DetailBtnCol"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lab1DetailBtnCol"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/lab1DetailBtnNat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/detail_big_text"
        android:text="@string/nat"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/lab1DetailLabelNat" />

    <Button
        android:id="@+id/lab1DetailBtnFib"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:textSize="@dimen/detail_big_text"
        android:text="@string/fib"

        app:layout_constraintLeft_toRightOf="@id/lab1DetailBtnNat"
        app:layout_constraintRight_toLeftOf="@id/lab1DetailBtnCol"
        app:layout_constraintTop_toBottomOf="@id/lab1DetailLabelFib" />

    <Button
        android:id="@+id/lab1DetailBtnCol"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/detail_big_text"
        android:text="@string/col"

        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lab1DetailLabelCol" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>