<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lab2.ui.Lab2Activity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_lab2_thread1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="70sp"
                android:textSize="50sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60sp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_lab2_speedUp1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_btn_textSize" />

                <Button
                    android:id="@+id/btn_lab2_speedDown1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_btn_textSize" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_lab2_thread2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="70sp"
                android:textSize="50sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60sp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_lab2_speedUp2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_btn_textSize" />

                <Button
                    android:id="@+id/btn_lab2_speedDown2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_btn_textSize" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_lab2_run"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_default"
            android:backgroundTint="@color/green"
            android:text="@string/run"
            android:textColor="@color/black"
            android:textSize="@dimen/big_btn_textSize" />

        <Button
            android:id="@+id/button_lab2_stop"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:text="@string/stop"
            android:textColor="@color/black"
            android:textSize="@dimen/big_btn_textSize" />

        <Button
            android:id="@+id/button_lab2_reset"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textSize="@dimen/big_btn_textSize" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/lab2_Bar1"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginBottom="620dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        style="@android:style/Widget.ProgressBar.Horizontal" />

    <ProgressBar
        android:id="@+id/lab2_Bar2"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginBottom="420dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        style="@android:style/Widget.ProgressBar.Horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>